[package]
name = "cradle_system"
version = "0.0.1-alpha1"
edition = "2021"
authors = ["Louis<836250617@qq.com>"]
repository = "https://github.com/kingwingfly/cradle_system"
documentation = "https://docs.rs/cradle_system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", no-default-features = true, features = ["time"] }
